--- a/app/templates/home/_chat.scss
+++ b/app/templates/home/_chat.scss
@@ -67,12 +67,6 @@
     position: fixed;
     top: 0;
 
-    .menu-group {
-      position: absolute;
-      right: 20px;
-      top: 16px;
-    }
-
     @media (max-width: 839px) {
       &.is_admin {
         padding-left: 72px;
@@ -262,17 +256,11 @@
     }    
   }
 
-  .more-options-1 {
-    color: $white;
-    position: absolute;
-    right: 65px;
-    top: 16px;
-  }
 
-  .more-options-2 {
-    color: $white;
+  .operations {
     position: absolute;
-    right: 115px;
+    right: 20px;
     top: 16px;
+    background-color: $deeppurple;
   }
 }
